# atom-chess

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CmakeUserPresets.json  CppProperties.json  Dockerfile  README.md  docker-compose.yml  setup_env.bat
.devcontainer/: Dockerfile  devcontainer.json
Hardware/Benchmarks/: CMakeLists.txt
Hardware/Benchmarks/bm1/: benchmark_board_detector.cpp  embedded_benchmark_report.md
Hardware/Benchmarks/bm1/results/: benchmark_board_detector_camera_required.txt
Software/Camera Capture/examples/: camera_test.cpp
Software/acvision/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CmakeUserPresets.json  README.md
Software/acvision/apps/: board_detection_demo.cpp  capture_gui.cpp
Software/acvision/docs/results/: README.md  benchmark_board_detector_camera_result.txt  benchmark_board_detector_result.txt  benchmark_board_detector_time_result.txt
Software/acvision/include/: fen_generator.hpp  stockfish_uci.hpp
Software/acvision/include/board_detector/: board_detector.hpp
Software/acvision/include/camera/: camera.hpp
Software/acvision/include/fen_generator/: fen_generator.hpp
Software/acvision/include/piece_detector/: piece_detector.hpp
Software/acvision/include/vision/: board_detector.hpp
Software/acvision/simulation/: simulator.cpp
Software/acvision/src/: fen_generator.cpp  piece_detector.cpp  stockfish_uci.cpp
Software/acvision/src/board_detector/: board_detector.cpp
Software/acvision/src/board_geometry/: board_geometry.cpp
Software/acvision/src/camera/: camera.cpp
Software/acvision/src/fen_generator/: fen_generator.cpp
Software/acvision/src/piece_detector/: piece_detector.cpp
Software/acvision/src/vision/: board_detector.cpp
Software/acvision/tests/: README.MD  benchmark_board_detector.cpp  test_board_detector.cpp  test_camera.cpp  test_fen_generator.cpp  test_piece_detector.cpp
Software/acvision/tests/camera/: capture_test.cpp  test_camera.cpp
Software/vision/: README.md
Software/vision/examples/: camera_test.cpp
Software/vision/include/: camera_capture.hpp  fen_generator.hpp  piece_detector.hpp
Software/vision/src/: fen_generator.cpp  frame-capture.cpp  piece_detector.cpp
hardware/Architechture/DistributedSystem/v0/v0.5/: Interface Adapter Use Case-2026-07-16-151231.mmd
hardware/Plataforms/Banana Pi M5/: specs.txt
hardware/Project/Banana Pi M5 case/: BananaPi M5 Case Lid.3mf  BananaPi M5 Case.3mf
hardware/Project/Models/ARQUIVOS-BRAÇO/ARQUIVOS-BRAÇO/: J1-J2-J3-COUPLER.3mf
install/: local_setup.sh  setup.sh
log/: latest_build
simulation/: docker.txt
simulation/install/: local_setup.sh  setup.sh
simulation/install/atom_control/share/atom_control/: local_setup.bash  local_setup.dsv  local_setup.fish  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
simulation/install/atom_description/share/atom_description/: local_setup.bash  local_setup.dsv  local_setup.fish  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
simulation/install/motion/include/motion/: move.hpp
simulation/install/motion/share/motion/: local_setup.bash  local_setup.dsv  local_setup.fish  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
simulation/log/: latest_build
simulation/src/: CMakeLists.txt  motion  package.xml
simulation/src/atom_control/: CMakeLists.txt  package.xml
simulation/src/atom_control/config/scara_arm_controller/follow_joint_trajectory/: controllers.yaml
simulation/src/atom_control/launch/: robot_sim.launch.py
simulation/src/atom_control/log/: latest_list
simulation/src/atom_control/src/: scara_commander.cpp
simulation/src/atom_description/: CMakeLists.txt  package.xml
simulation/src/atom_description/launch/: display.launch.py  gazebo.launch.py  view_robot.launch.py
simulation/src/atom_description/meshes/: gripper_hand1.stl  z_axis.stl
simulation/src/atom_description/urdf/: atom.urdf.xacro
simulation/src/launch/: view_robot.launch.py
simulation/src/meshes/: arm1.stl  arm2.stl  gripper_back.stl  gripper_hand2.stl
simulation/src/urdf/: atom.urdf.xacro
software/: .env  README.md
software/acchess/: CMakeLists.txt
software/acchess/apps/: chess.demo.cpp
software/acchess/include/board/: board.hpp  move.hpp  piece.hpp  square.hpp
software/acchess/include/utils/: path.hpp
software/acchess/include/viewer/: renderer.hpp  texture_manager.hpp
software/acchess/src/board/: board.cpp  move.cpp  piece.cpp  square.cpp
software/acchess/src/utils/: path.cpp
software/acchess/src/viewer/: renderer.cpp  texture_manager.cpp
software/acmotion/: CMakeLists.txt  package.xml
software/acmotion/include/motion/: motion_planner.hpp  move.hpp
software/acmotion/src/: motion_planner.cpp
software/acvision/: CMakeLists.txt  README.md
software/acvision/apps/: board_demo.cpp  board_detection_demo.cpp  capture_gui.cpp
software/acvision/include/: stockfish_uci.hpp
software/acvision/include/board_detector/: board_detector.hpp
software/acvision/include/board_geometry/: board_geometry.hpp
software/acvision/include/board_state/: board_state.hpp
software/acvision/include/board_vision/: board_vision.hpp
software/acvision/include/homography/: homography.hpp
software/acvision/include/piece_detector/: piece_detector.hpp
software/acvision/simulation/: simulator.cpp
software/acvision/src/: stockfish_uci.cpp
software/acvision/src/board_detector/: board_detector.cpp
software/acvision/src/board_state/: board_state.cpp
software/acvision/src/board_vision/: board_vision.cpp
software/acvision/src/camera/: camera.cpp
software/acvision/src/homography/: homography.cpp
software/acvision/src/piece_detector/: piece_detector.cpp
software/acvision/tests/: CMakeLists.txt  README.MD  test_board_detector.cpp  test_board_geometry.cpp  test_camera.cpp  test_piece_detector.cpp  test_stockfish_uci.cpp
software/motion/: CMakeLists.txt
software/motion/src/: move.cpp
wsl/: prep.md
(+47 files in other folders)
