<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion</name>
  <version>0.0.0</version>
  <description>Biblioteca pura de cinematica e trajetorias (No ROS dependencies)</description>
  <maintainer email="seu@email.com">Enzo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>