<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>atom_control</name>
  <version>0.0.1</version>
  <description>High level controll Node for Atom Chess SCARA Robot</description>
  <maintainer email="enzorochaleitedinizribas@gmail.com">oEnzoRibas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>motion</depend>
  
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
</package>