<?xml version="1.0"?>
<package format="3">

  <name>atom_description</name>
  <version>0.0.1</version>

  <description>
    Description package for ATOM Chess SCARA robot
  </description>

  <maintainer email="enzorochaleitedinizribas@gmail.com">
    Enzo Ribas
  </maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>